update photo, change oss from hk to beijing

--- a/hyphoto/city.html
+++ b/hyphoto/city.html
@@ -114,6 +114,13 @@
                 <p>
             </article>
             <article class="thumb">
+                    <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/guangzhou.jpg" class="image">
+                        <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/guangzhou.jpg" alt="">
+                    </a>
+                    <h2>Line Up Guangzhou</h2>
+                    <p>
+                </article>
+            <article class="thumb">
                 <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/TusPark-min.jpg" class="image">
                     <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/TusPark-min.jpg" alt="">
                 </a>
