--- a/hyphoto/daily.html
+++ b/hyphoto/daily.html
@@ -30,6 +30,70 @@
         <!-- Main -->
         <div id="main">
             <article class="thumb">
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/daily/trace.jpg" class="image">
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/daily/trace.jpg" alt="">
+                </a>
+                <h2>trace</h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/daily/glaxay-soho.jpg" class="image">
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/daily/glaxay-soho.jpg" alt="">
+                </a>
+                <h2>glaxay soho</h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/daily/old-and-new.jpg" class="image">
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/daily/old-and-new.jpg" alt="">
+                </a>
+                <h2>old and new</h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/daily/on-the-roof.jpg" class="image">
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/daily/on-the-roof.jpg" alt="">
+                </a>
+                <h2>on the roof</h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/daily/hutong.jpg" class="image">
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/daily/hutong.jpg" alt="">
+                </a>
+                <h2>hutong</h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/daily/wandering.jpg" class="image">
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/daily/wandering.jpg" alt="">
+                </a>
+                <h2>wandering</h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/daily/copies.jpg" class="image">
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/daily/copies.jpg" alt="">
+                </a>
+                <h2>copies</h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/daily/betray.jpg" class="image">
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/daily/betray.jpg" alt="">
+                </a>
+                <h2>betray</h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/daily/cry.jpg" class="image">
+                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/daily/cry.jpg" alt="">
+                </a>
+                <h2>cry</h2>
+                <p>
+            </article>
+
+            <article class="thumb">
                 <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/daily/water2.jpg" class="image">
                     <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/daily/water2.jpg" alt="">
                 </a>
