--- a/hyphoto/city.html
+++ b/hyphoto/city.html
@@ -29,226 +29,226 @@
         <!-- Main -->
         <div id="main">
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/Binhai-Library.jpg" class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/Binhai-Library.jpg" alt="">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/Binhai-Library.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/Binhai-Library.jpg" alt="">
                 </a>
                 <h2>Binhai Library</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/Eye-of-Tianjin.jpg" class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/Eye-of-Tianjin.jpg" alt="">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/Eye-of-Tianjin.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/Eye-of-Tianjin.jpg" alt="">
                 </a>
                 <h2>Eye of Tianjin</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/Arch-StLouis.jpg" class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/Arch-StLouis.jpg" alt="">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/Arch-StLouis.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/Arch-StLouis.jpg" alt="">
                 </a>
                 <h2>Arch St.Louis</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/passing-StLouis.jpg" class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/passing-StLouis.jpg" alt="">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/passing-StLouis.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/passing-StLouis.jpg" alt="">
                 </a>
                 <h2>passing St.Louis</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/University-Laboratory-High-School.jpg"
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/University-Laboratory-High-School.jpg"
                     class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/University-Laboratory-High-School.jpg"
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/University-Laboratory-High-School.jpg"
                         alt="">
                 </a>
                 <h2>University Laboratory High School</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/illini-union-in-snow.jpg"
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/illini-union-in-snow.jpg"
                     class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/illini-union-in-snow.jpg"
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/illini-union-in-snow.jpg"
                         alt="">
                 </a>
                 <h2>illini union in snow</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/winter-storm-with-Illinois.jpg"
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/winter-storm-with-Illinois.jpg"
                     class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/winter-storm-with-Illinois.jpg"
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/winter-storm-with-Illinois.jpg"
                         alt="">
                 </a>
                 <h2>winter storm with Illinois</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/Corn-and-Snow.jpg" class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/Corn-and-Snow.jpg" alt="">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/Corn-and-Snow.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/Corn-and-Snow.jpg" alt="">
                 </a>
                 <h2>Corn and Snow</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/3.jpg" class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/3.jpg" alt="">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/3.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/3.jpg" alt="">
                 </a>
                 <h2>Sacred Heart Cathedral</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/4.jpg" class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/4.jpg" alt="">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/4.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/4.jpg" alt="">
                 </a>
                 <h2>Sacred Heart Cathedral</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/Sacred%20Heart%20Cathedral-min.jpg"
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/Sacred%20Heart%20Cathedral-min.jpg"
                     class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/Sacred%20Heart%20Cathedral-min.jpg"
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/Sacred%20Heart%20Cathedral-min.jpg"
                         alt="">
                 </a>
                 <h2>Sacred Heart Cathedral</h2>
                 <p>
             </article>
             <article class="thumb">
-                    <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/guangzhou.jpg" class="image">
-                        <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/guangzhou.jpg" alt="">
+                    <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/guangzhou.jpg" class="image">
+                        <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/guangzhou.jpg" alt="">
                     </a>
                     <h2>Line Up Guangzhou</h2>
                     <p>
                 </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/TusPark-min.jpg" class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/TusPark-min.jpg" alt="">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/TusPark-min.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/TusPark-min.jpg" alt="">
                 </a>
                 <h2>Tuspark</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/Tsinghua-min.jpg" class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/Tsinghua-min.jpg" alt="">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/Tsinghua-min.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/Tsinghua-min.jpg" alt="">
                 </a>
                 <h2>tsinghua</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/view-to-capital-min.jpg"
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/view-to-capital-min.jpg"
                     class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/view-to-capital-min.jpg" alt="">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/view-to-capital-min.jpg" alt="">
                 </a>
                 <h2>view to captial</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/wangjingSOHO-min.jpg" class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/wangjingSOHO-min.jpg" alt="">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/wangjingSOHO-min.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/wangjingSOHO-min.jpg" alt="">
                 </a>
                 <h2>Wangjing soho</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/wangjingSOHO2-min.jpg" class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/wangjingSOHO2-min.jpg" alt="">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/wangjingSOHO2-min.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/wangjingSOHO2-min.jpg" alt="">
                 </a>
                 <h2>wangjing SOHO</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/UW-lib-in-church-min.jpg"
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/UW-lib-in-church-min.jpg"
                     class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/UW-lib-in-church-min.jpg"
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/UW-lib-in-church-min.jpg"
                         alt="">
                 </a>
                 <h2>UW lib in "church"</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/UW-Quad-min.jpg" class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/UW-Quad-min.jpg" alt="">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/UW-Quad-min.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/UW-Quad-min.jpg" alt="">
                 </a>
                 <h2>UW Quad</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/Ferris-wheel-min.jpg" class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/Ferris-wheel-min.jpg" alt="">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/Ferris-wheel-min.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/Ferris-wheel-min.jpg" alt="">
                 </a>
                 <h2>ferris-wheel</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/seattle2-min.jpg" class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/seattle2-min.jpg" alt="">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/seattle2-min.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/seattle2-min.jpg" alt="">
                 </a>
                 <h2>seattle</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/seattle-min.jpg" class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/seattle-min.jpg" alt="">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/seattle-min.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/seattle-min.jpg" alt="">
                 </a>
                 <h2>seattle</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/ice-below-cloud-min.jpg"
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/ice-below-cloud-min.jpg"
                     class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/ice-below-cloud-min.jpg" alt="">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/ice-below-cloud-min.jpg" alt="">
                 </a>
                 <h2>ice below cloud</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/train-to-trump-min.jpg"
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/train-to-trump-min.jpg"
                     class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/train-to-trump-min.jpg" alt="">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/train-to-trump-min.jpg" alt="">
                 </a>
                 <h2>train to trump</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/NYC-twin-bridges-min.jpg"
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/NYC-twin-bridges-min.jpg"
                     class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/NYC-twin-bridges-min.jpg"
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/NYC-twin-bridges-min.jpg"
                         alt="">
                 </a>
                 <h2>"twin" bridges</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/NYC-brooklyn-min.jpg" class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/NYC-brooklyn-min.jpg" alt="">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/NYC-brooklyn-min.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/NYC-brooklyn-min.jpg" alt="">
                 </a>
                 <h2>Brooklyn Bridge</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/NYC%20Skyline-min.jpg" class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/NYC%20Skyline-min.jpg" alt="">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/NYC%20Skyline-min.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/NYC%20Skyline-min.jpg" alt="">
                 </a>
                 <h2>NYC skyline</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/noexit-min.jpg" class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/noexit-min.jpg" alt="">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/noexit-min.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/noexit-min.jpg" alt="">
                 </a>
                 <h2>NO-EXIT NYC</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/NYC-road-min.jpg" class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/NYC-road-min.jpg" alt="">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/NYC-road-min.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/NYC-road-min.jpg" alt="">
                 </a>
                 <h2>NYC Road</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/kyotostation-min.jpg" class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/city/kyotostation-min.jpg" alt="">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/kyotostation-min.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/city/kyotostation-min.jpg" alt="">
                 </a>
                 <h2>kyoto station</h2>
                 <p>
