--- a/hyphoto/cosplay.html
+++ b/hyphoto/cosplay.html
@@ -29,85 +29,85 @@
         <!-- Main -->
         <div id="main">
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/cosplay/bilibili.jpg" class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/cosplay/bilibili.jpg" alt="">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/cosplay/bilibili.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/cosplay/bilibili.jpg" alt="">
                 </a>
                 <h2>Bilibili 2233 by 大甜&喵酱</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/cosplay/bilibili2.jpg" class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/cosplay/bilibili2.jpg" alt="">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/cosplay/bilibili2.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/cosplay/bilibili2.jpg" alt="">
                 </a>
                 <h2></h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/cosplay/bilibili3.jpg" class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/cosplay/bilibili3.jpg" alt="">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/cosplay/bilibili3.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/cosplay/bilibili3.jpg" alt="">
                 </a>
                 <h2></h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/cosplay/kda1-min.jpg" class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/cosplay/kda1-min.jpg" alt="">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/cosplay/kda1-min.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/cosplay/kda1-min.jpg" alt="">
                 </a>
                 <h2>KDA Widow by 爆炸糖</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/cosplay/kda2-min.jpg" class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/cosplay/kda2-min.jpg" alt="">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/cosplay/kda2-min.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/cosplay/kda2-min.jpg" alt="">
                 </a>
                 <h2></h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/cosplay/kda3-min.jpg" class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/cosplay/kda3-min.jpg" alt="">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/cosplay/kda3-min.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/cosplay/kda3-min.jpg" alt="">
                 </a>
                 <h2></h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/cosplay/kda4-min.jpg" class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/cosplay/kda4-min.jpg" alt="">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/cosplay/kda4-min.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/cosplay/kda4-min.jpg" alt="">
                 </a>
                 <h2></h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/cosplay/kda5-min.jpg" class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/cosplay/kda5-min.jpg" alt="">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/cosplay/kda5-min.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/cosplay/kda5-min.jpg" alt="">
                 </a>
                 <h2></h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/cosplay/kda6-min.jpg" class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/cosplay/kda6-min.jpg" alt="">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/cosplay/kda6-min.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/cosplay/kda6-min.jpg" alt="">
                 </a>
                 <h2></h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/cosplay/niko1-min.jpg" class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/cosplay/niko1-min.jpg" alt="">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/cosplay/niko1-min.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/cosplay/niko1-min.jpg" alt="">
                 </a>
                 <h2>Nico Yazawa 花妖精 by 黎湮</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/cosplay/niko2-min.jpg" class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/cosplay/niko2-min.jpg" alt="">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/cosplay/niko2-min.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/cosplay/niko2-min.jpg" alt="">
                 </a>
                 <h2></h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/cosplay/niko3-min.jpg" class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/cosplay/niko3-min.jpg" alt="">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/cosplay/niko3-min.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/cosplay/niko3-min.jpg" alt="">
                 </a>
                 <h2></h2>
                 <p>
