--- a/hyphoto/lightfiredream.html
+++ b/hyphoto/lightfiredream.html
@@ -29,50 +29,50 @@
         <!-- Main -->
         <div id="main">
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lightfiredream/disney1.jpg" class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lightfiredream/disney1.jpg" alt="">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/lightfiredream/disney1.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/lightfiredream/disney1.jpg" alt="">
                 </a>
                 <h2>To brave explorers</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lightfiredream/disney2.jpg" class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lightfiredream/disney2.jpg" alt="">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/lightfiredream/disney2.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/lightfiredream/disney2.jpg" alt="">
                 </a>
                 <h2>To those "fools"</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lightfiredream/disney3.jpg" class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lightfiredream/disney3.jpg" alt="">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/lightfiredream/disney3.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/lightfiredream/disney3.jpg" alt="">
                 </a>
                 <h2>To those who dream big</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lightfiredream/3.jpg" class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lightfiredream/3.jpg" alt="">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/lightfiredream/3.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/lightfiredream/3.jpg" alt="">
                 </a>
                 <h2>fight</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lightfiredream/2.jpg" class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lightfiredream/2.jpg" alt="">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/lightfiredream/2.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/lightfiredream/2.jpg" alt="">
                 </a>
                 <h2>star and light</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lightfiredream/1.jpg" class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lightfiredream/1.jpg" alt="">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/lightfiredream/1.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/lightfiredream/1.jpg" alt="">
                 </a>
                 <h2>trace of light</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lightfiredream/japanhouse.jpg" class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/lightfiredream/japanhouse.jpg" alt="">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/lightfiredream/japanhouse.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/lightfiredream/japanhouse.jpg" alt="">
                 </a>
                 <h2>Japan House's 20th anniversary</h2>
                 <p>
