--- a/hyphoto/uncate.html
+++ b/hyphoto/uncate.html
@@ -29,82 +29,82 @@
         <!-- Main -->
         <div id="main">
                 <article class="thumb">
-                        <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/uncate/Lunar-Eclipse.jpg" class="image">
-                            <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/uncate/Lunar-Eclipse.jpg"
+                        <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/uncate/Lunar-Eclipse.jpg" class="image">
+                            <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/uncate/Lunar-Eclipse.jpg"
                                  alt="">
                         </a>
                         <h2>Lunar Eclipse</h2>
                         <p>
                     </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/uncate/UW-sakura-min.jpg" class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/uncate/UW-sakura-min.jpg"
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/uncate/UW-sakura-min.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/uncate/UW-sakura-min.jpg"
                          alt="">
                 </a>
                 <h2>UW Sakura</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/uncate/winterchicago-min.jpg" class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/uncate/winterchicago-min.jpg"
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/uncate/winterchicago-min.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/uncate/winterchicago-min.jpg"
                          alt="">
                 </a>
                 <h2>fire in chicago's winter</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/uncate/fallchampaign-min.jpg" class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/uncate/fallchampaign-min.jpg"
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/uncate/fallchampaign-min.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/uncate/fallchampaign-min.jpg"
                          alt="">
                 </a>
                 <h2>fall champaign</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/uncate/UofI-South-Quad-min.jpg" class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/uncate/UofI-South-Quad-min.jpg"
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/uncate/UofI-South-Quad-min.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/uncate/UofI-South-Quad-min.jpg"
                          alt="">
                 </a>
                 <h2>UofI South Quad</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/uncate/sunriseWestLake-min.jpg" class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/uncate/sunriseWestLake-min.jpg"
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/uncate/sunriseWestLake-min.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/uncate/sunriseWestLake-min.jpg"
                          alt="">
                 </a>
                 <h2>sunrise west lake</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/uncate/roof-min.jpg"
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/uncate/roof-min.jpg"
                    class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/uncate/roof-min.jpg"
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/uncate/roof-min.jpg"
                          alt="">
                 </a>
                 <h2>roof</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/uncate/Lake-Michigan-min.jpg" class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/uncate/Lake-Michigan-min.jpg"
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/uncate/Lake-Michigan-min.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/uncate/Lake-Michigan-min.jpg"
                          alt="">
                 </a>
                 <h2>lake michigan</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/uncate/Jiuzhaigou-min.jpg" class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/uncate/Jiuzhaigou-min.jpg"
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/uncate/Jiuzhaigou-min.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/uncate/Jiuzhaigou-min.jpg"
                          alt="">
                 </a>
                 <h2>jiuzhaigou</h2>
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/uncate/Air-CHINA-min.jpg"
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/uncate/Air-CHINA-min.jpg"
                    class="image">
-                    <img src="https://frankieoss.oss-cn-beijing.aliyuncs.com/photo/uncate/Air-CHINA-min.jpg"
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/uncate/Air-CHINA-min.jpg"
                          alt="">
                 </a>
                 <h2>air china</h2>
