update matcha project

--- a/me.html
+++ b/me.html
@@ -28,6 +28,7 @@
         <ul class="links">
             <li>
                 <a href="index.html">Home</a>
+            <li><a href="matcha.html">Matcha Housing Project</a>
             <li><a href="idflakies.html">Flaky Tests Detection Tool</a>
             <li>
                 <a href="peaband.html">Conceptual Wearable Device</a>
