--- a/photo.html
+++ b/photo.html
@@ -28,6 +28,7 @@
             <ul class="links">
                 <li>
                     <a href="index.html">Home</a>
+                <li><a href="matcha.html">Matcha Housing Project</a>
                 <li><a href="idflakies.html">Flaky Tests Detection Tool</a>
                 <li>
                     <a href="peaband.html">Conceptual Wearable Device</a>
@@ -50,7 +51,7 @@
                     <h1>HYPhoto by Frankie</h1>
                 </header>
                 <div class="content">
-                    <p>Capture Life Moments
+                    <p>Capture Life Moments</p>
                 </div>
             </div>
         </section>
