--- a/idflakies.html
+++ b/idflakies.html
@@ -18,6 +18,7 @@
         <nav id="menu">
             <ul class="links">
                 <li><a href="index.html">Home</a>
+                <li><a href="matcha.html">Matcha Housing Project</a>
                 <li><a href="idflakies.html">Flaky Tests Detection Tool</a>
                 <li><a href="peaband.html">Conceptual Wearable Device</a>
                 <li><a href="vpn/index.html">Vitrual Private Network</a>
