--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <nav id="menu">
             <ul class="links">
                 <li><a href="index.html">Home</a>
+                <li><a href="matcha.html">Matcha Housing Project</a>
                 <li><a href="idflakies.html">Flaky Tests Detection Tool</a>
                 <li><a href="peaband.html">Conceptual Wearable Device</a>
                 <li><a href="vpn/index.html">Vitrual Private Network</a>
@@ -46,6 +47,13 @@
         <div id="main">
             <!-- One -->
             <section id="one" class="tiles">
+                    <article>
+                            <span class="image"><img src="images/matcha.jpg" alt=""></span>
+                            <header class="major">
+                                <h3><a href="matcha.html" class="link">Matcha Housing</a></h3>
+                                <p>A Database Project
+                            </header>
+                        </article>
                 <article>
                     <span class="image"><img src="images/idflakies.jpg" alt=""></span>
                     <header class="major">
